--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/projectdb?verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.username=AppUser
+spring.datasource.password=AppUser@123
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+
+server.servlet.context-path=/raisefood
 
