--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_raisefood??allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_raisefood?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.username=AppUser
 spring.datasource.password=AppUser@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
