--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_raisefood?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_raisefood?allowPublicKeyRetrieval=true&verifyServerCertificate=false&useSSL=false&requireSSL=false&serverTimezone=UTC
 spring.datasource.username=AppUser
-spring.datasource.password=AppUser@123
+spring.datasource.password=appuser
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
